chore: renaming the attribute from generic to compliance_rule_table

--- a/modules/pack/assets/conformance-pack.yaml.tmpl
+++ b/modules/pack/assets/conformance-pack.yaml.tmpl
@@ -18,4 +18,4 @@ Resources:
             MessageType: ScheduledNotification
             MaximumExecutionFrequency: ${max_execution_frequency}
       InputParameters:
-        DynamoDBTableArn: ${dynamodb_table_arn}
+        TABLE_ARN_RULES: ${compliance_rule_table_arn}
